(fix): rich embed title overflows (#684)

--- a/src/app/common/components/rich-embed/rich-embed.scss
+++ b/src/app/common/components/rich-embed/rich-embed.scss
@@ -82,4 +82,7 @@ minds-rich-embed {
       box-sizing: border-box;
     }
   }
+  .m-rich-embed--title {
+    word-break: break-all;
+  }
 }
